--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1>Wel Come to My website</h1>
 <hr>
   <img class="fit-picture"
-     src="/Image/20160801_101219.jpg"
+     src="Image/20160801_101219.jpg"
      alt="Abinash Bstry">
 <p>Hello Website! I am Abinash Basumatary. I am a student of Master Degree. I like to create website.</p>
 </body>
