Second index file

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <body>
 <h1>Wel Come to My website</h1>
 <hr>
-  <img class="fit-picture"
-     src="Image/20160801_101219.jpg"
-     alt="Abinash Bstry">
+<img src="Image/20160801_101219.jpg"
+alt="Abinash">
 <p>Hello Website! I am Abinash Basumatary. I am a student of Master Degree. I like to create website.</p>
 </body>
 </htmL>
